# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("${chip_root}/src/app/chip_data_model.gni")

chip_data_model("evse-common") {
  zap_file = "evse-app.zap"

  zap_pregenerated_dir = "${chip_root}/zzz_generated/evse-app/zap-generated"
  is_server = true
}

config("config") {
  include_dirs = [ "include" ]
}

source_set("evse-cluster-service") {
  deps = [
    "${chip_root}/examples/evse-app/evse-common",
    "${chip_root}/src/lib",
  ]
  public_configs = [ ":config" ]
  sources = [
    "include/EvseEndpoint.h",
    "include/EvseManager.h",
    "src/EvseEndpoint.cpp",
    "src/EvseManager.cpp",
    "src/ZCLEvseCallbacks.cpp",
  ]
}
